# HOS

./: .drone.yml  .gitattributes  .gitignore  Bochs-2.6.2.lnk  CMakeLists.txt  Dockerfile  HOS.sln  LICENSE  Makefile  README.md  ReadME.txt  Rules.top  UltraISO.lnk  a.img  bochs.bxrc  bochs64.bxrc  bochsUbuntu.bxrc  bochsdbg.bxrc  bochsdbg64.bxrc  bochsdbg_win.bxrc  bochsout.txt  bochsrc  bochsrc.bxrc  bootstrap.sh  bootstrap_deb.sh  dbg.bat  dbgq  gdb_qemu.dbg  gdbq  gdbw  grub.cfg  linked_list.c  linked_list.h  makefile  makfile  qemu.bat  qemugdb  runq.sh
HOS/: HOS.vcxproj  HOS.vcxproj.filters
HOS-BAK/: ReadME.txt  makefile
HOS-BAK/boot/: boot.asm
HOS-BAK/kalib/: _asm_KeMemory32.asm
HOS-BAK/kclib/: KeDef.h  KeGlobalVariables.h  KeGraph32.h  KeIO32.h  KeKernelEntry.c  KeMemory32.h  KeProcess32.h
HOS-BAK/os/: Bochs-2.6.2.lnk  Cygwin Terminal.lnk  a.img
OScript/: cpkrnl  grub.cfg  grub.h  kernel.c  kernel_multiboot.asm  mkhd  mkimg  mkiso  multiboot.asm  type.h
OScript/multiboot1/: entry.c  grub.cfg  link.ld  mkiso
Test/: avl_tree_test.c  linked_list_test.c  linked_list_test_output.txt  main.c
arch/: CMakeLists.txt  atomic.asm  boot.asm  boot.asm.in  brute.c  cpu.asm  cpu.c  cpu.h  init.c  intr.asm  intr.c  main.c  mb_hdr.asm  mem.c  paging.c  paging.h  pmap.c  pmap_p.h  print.c  trap.asm
bochs_compile/: compile_gdb.sh  compile_idb.sh
boot/: loader.asm
common/: CMakeLists.txt  Rules.mk  avl_tree.c  clib.c  common.c
hal/: Rules.mk  atomic.asm  atomic.c  boot.asm  boot.asm.in  boot.c  cpu.asm  cpu.h  hal.c  hp.h  init.c  intr.asm  intr.c  intr.h  io.asm  mb_hdr.asm.in  mem.c  mem.h  multiboot2.h  print.c  print.h
hal/inc/: atomic.h  cpu.h  hdef.h  intr.h  io.h  mem.h  multiboot2.h  print.h
inc/: cdef.h  common.h  hal.h  hal_export.h  kernel.h  mlayout.h
inc/arch/: atomic.h  brute.h  cpu.h  intr.h  mem.h  mlayout.h  pmap.h  print.h  trap.h
inc/common/: avl_tree.h  cdef.h  consts.h  lds.h  libkern.h  list.h
inc/ke/: assert.h  atree.h  bitmap.h  brute.h  cdef.h  clib.h  dlist.h  kinit.h  panic.h  poison.h  print.h  ref.h  rww_lock.h  slist.h  spin_lock.h  status.h
inc/kern/: atree.h  avl_tree.h  bitmap.h  bitset.h  brute.h  cdef.h  clib.h  kinit.h  lds.h  libkern.h  list.h  panic.h  print.h  spin_lock.h  status.h
inc/kernel/: ke.h  lb.h  mm.h  rf.h  status.h
inc/mm/: balloc.h  mm.h  phys.h
inc/test/: ktest.h
include/: status.h  type.h
include/hal/: addr.inc  boot.h  cpu.h  intr.h  mem.h  print.h
include/kernel/hal/: atomic.h  boot.h  intr.h  mem.h  memdef.h  print.h
include/kernel/ke/: alloc.h  assert.h  atomic.h  boot.h  bug_check.h  intr.h  print.h  rwwlock.h  spin_lock.h  status.h
include/kernel/mm/: mem.h  pmm.h
include/kernel/rf/: ref.h
include/lib/: avl_tree.h  linked_list.h  salloc.h  sxtdlib.h
include/test/: driver.h  test_case.h
kclib/: KeCPUStruct32.h  KeDef.h  KeGlobalVariables.h  KeGraph32.c  KeGraph32.h  KeIO32.c  KeIO32.h  KeKernelEntry.c  KeKernelStruct32.h  KeMemory32.c  KeMemory32.h  KeProcess32.c  KeProcess32.h
kclib/MM/: KeMemoryManager32.h
kclib/header/: io32.h  kdef32.h
kclib/x86/hdr/: grub.h  mem32.h  type32.h
kclib/x86/src/: entry.c  io32.c
ke/: CMakeLists.txt  assert.c  atree.c  balloc.c  clib.c  dlist.c  intr.c  kmain.c  libkern.c  main.c  panic.c  print.c  ref.c  rww_lock.c  spin_lock.c
kern/: CMakeLists.txt  assert.c  atree.c  avl_tree.c  clib.c  kmain.c  libkern.c  list.c  main.c  panic.c  print.c  spin_lock.c
kernel/: Rules.mk  kernel.asm
kernel/inc/ke/: alloc.h  assert.h  atomic.h  intr.h  print.h
kernel/inc/lb/: dlist.h  htable.h  llist.h
kernel/inc/mm/: pmm.h
kernel/ke/: Rules.mk  alloc.c  assert.c  atomic.c  boot.c  bug_check.c  intr.c  intrp.h  kp.h  main.c  panic.c  print.c  rwwlock.c  spin_lock.c
kernel/lb/: Rules.mk  atree.c  dlist.c  htable.c  llist.c  lp.h  salloc.c  ssalloc.c
kernel/mm/: Rules.mk  mp.h  pmm.c
kernel/rf/: Rules.mk  ref.c  rf.c  rp.h
legacy/kalib/: _asm_KeProcess32.asm
legacy/lib/: fat12readfile.lib  io16.lib  io32.lib
legacy_bootloader/inc/: FAT12Header.inc
legacy_bootloader/kalib/: _asm_KeGraph32.asm  io32.asm
lib/: Rules.mk  avl_tree.c  io16.lib  linked_list.c  mem32.lib  salloc.c  sxtdlib.c
misc/balloc/: balloc.c
misc/bochs/: bochs.bxrc  bochs_win.bxrc  bootstrap.sh
miscellaneous/: Monokai.dvtcolortheme  NASM.sublime-package  PlainsOfSnows(JAPI).w3x  VS color scheme.vssettings  bifrost_thread.h  hw_thread.c  system
mk/: Rules.mk  amd64.cmake  common.cmake  epilogue.mk  grub.cfg  grub.cfg.in  kern.cmake  linker.ld.in  prologue.mk  stdrules.mk
mm/: CMakeLists.txt  balloc.c  phys.c  ssalloc.c
scripts/: CMakeLists.txt  grub.cfg  linker.lds
sim/bochs/: bochs.bxrc  bochs_win.bxrc
sim/qemu/: qemu.bat  qemu.sh
test/: CMakeLists.txt  Rules.mk  atree_test.c  avl_test.c  avl_tree_test.c  driver.c  kern_stub.c  ktest.c  linked_list_test.c  list_test.c  llist_test.c  qsort_test.c  salloc_test.c  test_main.c
test/inc/: test_case.h  test_main.h
x64/: CMakeLists.txt  bochs.bxrc  bochs_win.bxrc  grub.cfg  kernel.dasm  linker.ld  makefile
x86/: CMakeLists.txt  KeGraph32.h  KeIO32.c  bochsUbuntu.bxrc  grub.cfg  makefile
x86/src/: entry.c  grub.h  io32.h  kdef32.h  mem32.c  mem32.h  util.c  util.h
x86/src/asm/: asm_io32.asm  asm_mem32.asm  entry.asm  io.asm  mem.asm  multiboot.asm
x86/src/c/: entry.c  kdef.h  kdef32.h  mem.c  mem.h  mem32.c  mem32.h  multiboot.h  print.c  print.h  type.h  type32.h
(+539 files in other folders)
